<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/Layout1"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@drawable/spinner_bg1"
            android:gravity="center_horizontal"
            android:prompt="@string/spinner_prompt"
            android:spinnerMode="dropdown" />

        <RelativeLayout
            android:id="@+id/searchLayout"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_alignBaseline="@id/spinner"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/spinner"
            android:background="#ffffff"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imagebutton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/search_img"
                android:gravity="center" />

            <EditText
                android:id="@+id/edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/imagebutton"
                android:background="#ffffff"
                android:ellipsize="end"
                android:hint="@string/searchHint"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="12sp" />
        </RelativeLayout>

        <!--
          <SearchView
            android:id="@+id/searchview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:iconifiedByDefault="true"
            
            android:background="@drawable/search_rectangle"
            android:gravity="center_horizontal"
            
            android:inputType="textFilter"
            android:queryHint="@string/searchHint" />
        -->
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Layout1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="8sp"
        android:background="@drawable/search_content_arctangle"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="6sp"
            android:text="@string/souname1"
            android:textColor="#000000"
            android:textSize="16sp" />

        <GridView
            android:id="@+id/gridView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView1"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:horizontalSpacing="1pt"
            android:numColumns="6"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:verticalSpacing="1pt" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Layout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Layout2"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="8sp"
        android:background="@drawable/search_content_arctangle"
        android:textSize="16sp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6sp"
            android:text="@string/souname2"
            android:textColor="#000000"
            android:textSize="16sp" />

        <GridView
            android:id="@+id/gridView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:horizontalSpacing="1pt"
            android:numColumns="6"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:verticalSpacing="1pt" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Layout3"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="8sp"
        android:background="@drawable/search_content_arctangle"
        android:textSize="16sp" >

        <TextView
            android:id="@+id/school_news"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6sp"
            android:text="@string/souname3"
            android:textColor="#000000"
            android:textSize="16sp" />

       

        <ListView
            android:id="@+id/newsContentList"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/school_news"
            android:layout_marginTop="10sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />
    </RelativeLayout>

</RelativeLayout>