<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:arc="http://schemas.android.com/apk/res-auto"
	xmlns:app="http://schemas.android.com/apk/res/org.itrgroup.itr"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
   	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">
		
        <RelativeLayout
            android:id="@+id/content_item"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="4dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginLeft="5dp"
	        android:background="@drawable/content_arctangle_selection">
			
            <RelativeLayout 
                android:id="@+id/upcontent_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
	            <LinearLayout
	                android:id="@+id/avatar_layout"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:orientation="vertical"
			        android:layout_alignParentLeft="true"
			        android:layout_centerVertical="true" >
		        
		            <org.itrgroup.itr.utils.CircleImageView 
			            android:id="@+id/user_avatar"
			            android:layout_width="60dp"
			            android:layout_height="60dp"
			            android:layout_marginLeft="8dp"
			            android:layout_marginTop="12dp"
			            android:src="@drawable/avatar_1"
			            app:border_color="#ffffff"
			            app:border_width="0dp" />
		            
		        </LinearLayout>
	            
	            <RelativeLayout
	                android:id="@+id/info_layout"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal"
			        android:layout_alignParentTop="true"
			        android:layout_toRightOf="@id/avatar_layout"
			        android:layout_marginTop="8dp">
		            
		            <TextView
			            android:id="@+id/user_name"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="匿名同学 "
			            android:textSize="16sp"
			            android:textStyle="bold"
			            android:textColor="#90000000"
			            android:layout_marginLeft="12dp"/>
		            
		            <TextView
		                android:id="@+id/publish_time"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_alignParentRight="true"
		                android:layout_marginRight="8dp"
		                android:layout_marginTop="0dp"
		                android:text="2014.3.13 20:20"
		                android:textColor="#85000000"
		                android:textSize="13sp" />
		            
		             <ImageView
			            android:id="@+id/fir_tag"
			            android:layout_width="30dp"
		                android:layout_height="20dp"
			            android:layout_toLeftOf="@id/publish_time"
		               	android:layout_marginRight="8dp"
			            android:background="@drawable/firsttag_1" />
		            
		        </RelativeLayout>
	            
	            <TextView
		                android:id="@+id/publish_content"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		               	android:layout_below="@id/info_layout"
		               	android:layout_toRightOf="@id/avatar_layout"
		               	android:layout_marginLeft="12dp"
		               	android:layout_marginRight="8dp"
		               	android:layout_marginTop="12dp"
		                android:text="我想加入文学社，谁能告诉我怎么加入啊？？最好有相关负责人的联系方式，感谢！！的联系方式感谢！！的联系方式，感谢！！"
		                android:textColor="#000"
		                android:textSize="17sp" 
		                android:lineSpacingExtra="4dp"
		                android:maxLines="5"
		                android:ellipsize="end"/>
			</RelativeLayout>
			
            <LinearLayout
                android:id="@+id/tag_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/upcontent_layout"
                android:layout_marginTop="6dp"
                android:gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:paddingRight="8dp"
                    android:text="300m范围内 "
                    android:textStyle="bold"
                    android:textColor="#80000000"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="33dp"
	        android:orientation="horizontal"
	        android:background="#60000000"
	        android:layout_marginRight="6dp"
	        android:layout_marginLeft="6dp"
	        android:layout_marginTop="2dp">
	        
           <Button 
               	android:id="@+id/share"
               	android:background="@drawable/content_button_color"
               	android:layout_width="match_parent"
    			android:layout_height="33dp"
    			android:layout_weight="1"
               	android:text="@string/share"
               	android:textSize="13sp"
               	android:textColor="#fff" 
               	android:drawableStart="@drawable/content_share"
               	android:drawableRight="@drawable/content_line"
               	android:drawablePadding="-15dp"/>

           
           <Button 
               	android:id="@+id/comment"
               	android:background="@drawable/content_button_color"
               	android:layout_width="match_parent"
    			android:layout_height="33dp"
    			android:layout_weight="1"
               	android:text="@string/comment"
               	android:textSize="13sp"
               	android:textColor="#fff" 
               	android:drawableLeft="@drawable/content_comment"
               	android:drawableRight="@drawable/content_line"
               	android:drawablePadding="-15dp"/>
           
           <Button 
               	android:id="@+id/vote"
               	android:background="@drawable/content_button_color"
               	android:layout_width="match_parent"
    			android:layout_height="33dp"
    			android:layout_weight="1"
               	android:text="@string/vote"
               	android:textSize="13sp"
               	android:textColor="#fff" 
               	android:drawableLeft="@drawable/content_vote"
               	android:drawablePadding="-15dp"/>
        </LinearLayout>
        
    </LinearLayout>
</RelativeLayout>